--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "instafeed.js": "^2.0.0",
     "rxjs": "~7.4.0",
     "scrollbooster": "^3.0.2",
     "swiper": "^7.3.2",
