--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "firebase": "^9.4.0",
     "instafeed.js": "^2.0.0",
+    "rxfire": "^6.0.0",
     "rxjs": "~7.4.0",
     "scrollbooster": "^3.0.2",
     "swiper": "^7.3.2",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "firebase": "^9.4.0",
-    "rxfire": "^6.0.0"
+    "uuid": "^8.3.2",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.1",
@@ -35,6 +36,7 @@
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@types/scrollbooster": "^2.2.1",
+    "@types/uuid": "^8.3.3",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
