--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "scrollbooster": "^3.0.2",
     "swiper": "^7.3.2",
     "tslib": "^2.3.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@types/scrollbooster": "^2.2.1",
+    "@types/uuid": "^8.3.3",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
