--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@lottiefiles/lottie-player": "^1.5.4",
     "firebase": "^9.4.0",
     "instafeed.js": "^2.0.0",
     "rxfire": "^6.0.0",
