Replaced testimonials, fixed call by reference and two testimonials at the same time problem

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@lottiefiles/lottie-player": "^1.5.4",
     "firebase": "^9.4.0",
     "instafeed.js": "^2.0.0",
+    "lodash": "^4.17.21",
     "rxfire": "^6.0.0",
     "rxjs": "~7.4.0",
     "scrollbooster": "^3.0.2",
@@ -35,6 +36,7 @@
     "@angular/cli": "~13.1.1",
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
+    "@types/lodash": "^4.14.178",
     "@types/node": "^12.11.1",
     "@types/scrollbooster": "^2.2.1",
     "@types/uuid": "^8.3.3",
