Added localization for most of the landing page and included language dropdown menu

--- a/angular.json
+++ b/angular.json
@@ -19,6 +19,14 @@
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
+      "i18n": {
+        "sourceLocale": "de",
+        "locales": {
+          "en": {
+            "translation": "src/locale/messages.en.xlf"
+          }
+        }
+      },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -29,6 +37,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
+            "localize": true,
             "assets": [
               {
                 "glob": "**",
@@ -78,6 +87,9 @@
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true
+            },
+            "en": {
+              "localize": ["en"]
             }
           },
           "defaultConfiguration": "production"
@@ -90,6 +102,9 @@
             },
             "development": {
               "browserTarget": "tomke-portfolio:build:development"
+            },
+            "en": {
+              "browserTarget": "tomke-portfolio:build:development,en"
             }
           },
           "defaultConfiguration": "development"
