Localization is now working on dev server

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,18 @@
 {
   "projects": {
     "default": "tomke-portfolio"
-  }
+  },
+  "targets": {
+    "tomke-portfolio": {
+      "hosting": {
+        "dev": [
+          "tomke-portfolio-dev"
+        ],
+        "prod": [
+          "tomke-portfolio"
+        ]
+      }
+    }
+  },
+  "etags": {}
 }
