--- a/firebase.json
+++ b/firebase.json
@@ -3,20 +3,52 @@
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
   },
-  "hosting": {
-    "public": "public",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
+  "hosting": [
+    {
+      "target": "dev",
+      "public": "public",
+      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+      "rewrites": [
+        {
+          "source": "/en/**",
+          "destination": "/en/index.html"
+        },
+        {
+          "source": "/de/**",
+          "destination": "/de/index.html"
+        },
+        {
+          "source": "/**",
+          "destination": "/de/index.html"
+        }
+      ],
+      "i18n": {
+        "root": "/"
       }
-    ]
-  },
+    },
+    {
+      "target": "prod",
+      "public": "public",
+      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+      "rewrites": [
+        {
+          "source": "/en/**",
+          "destination": "/en/index.html"
+        },
+        {
+          "source": "/de/**",
+          "destination": "/de/index.html"
+        },
+        {
+          "source": "/**",
+          "destination": "/de/index.html"
+        }
+      ],
+      "i18n": {
+        "root": "/"
+      }
+    }
+  ],
   "storage": {
     "rules": "storage.rules"
   },
