Changed default rewrite for dev deployment

--- a/firebase.json
+++ b/firebase.json
@@ -19,7 +19,7 @@
         },
         {
           "source": "/**",
-          "destination": "/en/index.html"
+          "destination": "/de/index.html"
         }
       ],
       "i18n": {
